# InterpKit

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.py  data_tabel.xlsx  logic.py  main.py  ui.py
cmake/: embed_resource.cmake  llvm-mingw-w64.cmake  mingw-w64-x86_64.cmake
src/: config.h  logic.cpp  logic.h  main.cpp  ui.cpp  ui.h
